Made 60% of commands work.